# gl-sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
res/shaders/: color3d.glsl  dither.glsl  framebuffer.glsl  litTexture.glsl  skyboxShader.glsl  specTexture.glsl  texture3d.glsl
src/: Application.cpp  Application.h  ApplicationSpec.h  BufferLayout.cpp  BufferLayout.h  FBO.cpp  FBO.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
src/Events/: Event.cpp  Event.h
src/Math/: MatrixUtils.h
src/Model/: CubeModel.h  Model.h  NormalCubeModel.h  RectangleModel.h
src/Renderer/: BufferLayout.cpp  BufferLayout.h  FBO.cpp  FBO.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  RendererTypes.cpp  RendererTypes.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Light.h  Material.h  Scene.h
src/Scene/Tests/: LightingScene.cpp  LightingScene.h
src/Texture/: CubemapTexture.cpp  CubemapTexture.h  Texture.h  Texture2D.cpp  Texture2D.h
src/Util/: Timestep.cpp  Timestep.h
src/core/: Core.h  GLCore.cpp  GLCore.h  Image.cpp  Image.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h
